@@ -46,7 +46,7 @@ import org.gjt.sp.util.Log;
  * jEdit's text component.
  *
  * @author Slava Pestov
- * @version $Id: JEditTextArea.java,v 1.29 2001/11/14 09:35:20 spestov Exp $
+ * @version $Id: JEditTextArea.java,v 1.30 2001/11/15 07:57:20 spestov Exp $
  */
 public class JEditTextArea extends JComponent
 {
@@ -3293,7 +3293,17 @@ loop:		for(int i = lineNo - 1; i >= 0; i--)
 		}
 		int x = offsetToX(caretLine,caret - start);
 		buffer.remove(start,end - start);
-		setCaretPosition(start + xToOffset(caretLine,x));
+
+		int lastLine = buffer.getLineCount() - 1;
+		if(caretLine == lastLine)
+		{
+			setCaretPosition(buffer.getLineStartOffset(lastLine)
+				+ xToOffset(caretLine,x));
+		}
+		else
+		{
+			setCaretPosition(start + xToOffset(caretLine,x));
+		}
 	} //}}}
 
 	//{{{ deleteParagraph() method
